# holoSeq

./: .gitignore  .pre-commit-config.yaml  Dockerfile  HoloSeqOverview.md  README.md  environment.yaml  hapsHiCpaf.py  hapsHiCpafHoloview.ipynb  holoSeq_prepare_paf.py  holoSeq_random.py  holoseq_display.py  holoseq_gff.py  mUroPar1H2suffix.len  pyproject.toml  randheatplot.py  requirements.txt
.github/workflows/: test.yaml
data/: mUroPar1H1suffix.len
docs/: HoloSeqOverview.md
envs/: py3.10-tests.yaml  py3.11-tests.yaml  py3.12-tests.yaml
hic-converter/: README.md  environment.yml  hic2hseq.py
notebooks/: hapsHiCpafHoloview.ipynb  load-hic-from-GEO.ipynb
scripts/: hapsHiCpaf.py  hic2hseq.py  holoSeq_prepare_paf.py  holoSeq_random.py  holoseq_display.py  holoseq_gff.py  squirrel.py
src/holoseq/: config.py  data.py  exceptions.py  view.py
tests/: test_basic.py  test_data.py
