[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "holo_seq"
dynamic = ["version"]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">3.10,<3.13"
authors = [{name = "HoloViz developers", email = "developers@holoviz.org"}]
maintainers = [{name = "HoloViz developers", email = "developers@holoviz.org"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "bokeh",
    "dask[dataframe]",
    "datashader",
    "holoviews[recommended]",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]
notebooks = [
    "jupyterlab",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.dynamic]
version = {attr = "holo_seq.__version__"}
